# Parameterized-radom-generator

./: CMakeLists.txt  README.md  buglist  main.cpp  test.cpp
inc/: cashedconfiguration.hpp  coeffgenerator.hpp  coefficients.hpp  configuration.hpp  linearconfiguration.hpp
inc/configurations/: configuration.hpp  linear_configuration.hpp  linearconfiguration.hpp  simple_configuration.hpp
lib/beautyPrinter/: CMakeLists.txt
lib/beautyPrinter/inc/: beautyprinter.hpp
lib/beautyPrinter/src/: beautyprinter.cpp
src/: beautyprinter.cpp  coeffgenerator.cpp  coefficients.cpp  linearconfiguration.cpp
src/configurations/: configuration.cpp  linear_configuration.cpp  linearconfiguration.cpp  simple_configuration.cpp
tests/: linear_test.cpp  simple_test.cpp  test.cpp  test.hpp
